@@ -1,3 +1,6 @@
+2007-05-24: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Signature.pm: accept and use v=1 tag instead of v=0.5
+
 2007-05-10: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/PublicKey.pm: simplify error handling in fetch()
  * lib/Mail/DKIM/Policy.pm: simplify error handling in fetch()
